--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ O inverno do hemisfério norte é chamado "inverno boreal" e o do hemisfério su
             </p>
         </div>
         <figure>
-            <img src="./img/inverno 1.png" alt="Inverno">
+            <img src="./img/inverno 1.png" alt="Floresta no Inverno">
         </figure>
         </section>
         <section class="sec2">
@@ -41,26 +41,28 @@ O inverno do hemisfério norte é chamado "inverno boreal" e o do hemisfério su
             </h2>
         </section>
         <section class="sec3">
-            <figure class="urso">
+            <figure>
                 <img src="./img/urso4.png" alt="Urso Polar e seus filhotes">
                 <img src="./img/urso1.png" alt="Urso Polar foto de rosto">
-                <img src="./img/urso 3.png" alt="Urso Polar no solo">
+                <img class="urso3" src="./img/urso 3.png" alt="Urso Polar no solo">
                 <img src="./img/urso 2.png" alt="Urso polar na neve">
             </figure>
         </section>
     </main>
     <footer>
-        <figure class="redesocial">
-            <img  src="./img/linkedin.png" alt="linkedin">
-            <img  src="./img/insta.png" alt="Instagram">
-            <img  src="./img/git.png" alt="Github">
-        </figure>
+        <nav>
+            <a href="https://www.linkedin.com/in/aluaportugal/"> <img  src="./img/linkedin.png" alt="linkedin"></a>
+            <a href="https://www.instagram.com/aluaportugal/?hl=pt-br"><img  src="./img/insta.png" alt="Instagram"></a>
+            <a href="https://github.com/aluaportugal"><img  src="./img/git.png" alt="Github"></a> 
+        </nav>
+
         <div class="text">
         <p>Lua Portugal Silva</p>
         <p>Carolina</p>
         <p>Kleber e Grazy</p>
         <p>Layout criado para fins de estudos na escola vai na web</p>
         </div>
+
         <figure>
             <img src="./img/pinguin.png" alt="Pinguin">
         </figure>
